--- a/index.html
+++ b/index.html
@@ -1,29 +1,162 @@
 <!DOCTYPE html>
-<html >
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>MINIMALISTIC FORM</title>
+  <title>Converslation</title>
   
   
   
       <link rel="stylesheet" href="css/style.css">
+      <script src="jquery-3.1.1.min.js"></script>
 
   
 </head>
 
 <body>
-  		<header>MINIMALISTIC FORM</header>
 
-<form id="form" class="topBefore">
-		
-		  <input id="name" type="text" placeholder="NAME">
-		  <input id="email" type="text" placeholder="E-MAIL">
-		  <textarea id="message" type="text" placeholder="MESSAGE"></textarea>
-  <input id="submit" type="submit" value="GO!">
-  
-</form>
-  
-    <script src="js/index.js"></script>
+<div id="contact-form">
+	<div>
+		<h1>Converslation</h1>
+    <h2>Conversational tool to allow users that speak different languages to interact.</h2>
+    <h3>CEN4721: Project One<h3/>
+		<h4>Christian Young</h4> 
+	</div>
+		<p id="failure">Oopsie...message not sent.</p>  
+		<p id="success">Your message was sent successfully. Thank you!</p>
 
+		   <form method="post" action="/">
+			<div>
+		      <label for="name1">
+		      	<span class="text">Message coming from: </span> 
+		      	<input type="text" id="name1" name="name1" value="" placeholder="First User's Name" required="required" tabindex="1" autofocus="autofocus" />
+		      </label> 
+			</div>
+      <div>             
+          <label for="lang1">
+          <span>In what language?</span>
+            <select id="lang1">   
+              <option value="ar">Arabic</option>
+              <option value="cs">Czech</option>
+              <option value="de">German</option>
+              <option value="en">English</option>
+              <option value="et">Estonian</option>
+              <option value="fi">Finnish</option>
+              <option value="fr">French</option>
+              <option value="nl">Dutch</option>
+              <option value="el">Greek</option>
+              <option value="he">Hebrew</option>
+              <option value="ht">Haitian Creole</option>
+              <option value="hu">Hungarian</option>
+              <option value="id">Indonesian</option>
+              <option value="it">Italian</option>
+              <option value="ja">Japanese</option>
+              <option value="lv">Latvian</option>
+              <option value="no">Norwegian</option>
+              <option value="pl">Polish</option>
+              <option value="pt">Portuguesse</option>
+              <option value="ro">Romanian</option>
+              <option value="es">Spanish</option>
+              <option value="ru">Russian</option>
+              <option value="sk">Slovak</option>
+              <option value="sv">Swedish</option>
+              <option value="th">Thai</option>
+              <option value="tr">Turkish</option>
+              <option value="uk">Ukrainian</option>
+              <option value="vi">Vietnamese</option>
+              <option value="zh-CHS">Simplified Chinese</option>
+              <option value="zh-CHT">Traditional Chinese</option>
+            </select>
+          </label>
+      </div>
+      <div>             
+          <label for="message">
+            <span>Message: </span> 
+            <textarea id="message" name="message" placeholder="Please write your message here." tabindex="5"></textarea> 
+          </label>  
+      </div>
+      <div>
+        <text>If an alternative keyboard is needed for input please go <a href="http://gate2home.com/" target="_blank">here</a> and copy your input, then paste it here in the message area.</text> 
+      </div>
+      <p></p>
+      <div>
+          <label for="name2">
+            <span class="text">Message being translated for: </span> 
+            <input type="text" id="name2" name="name2" value="" placeholder="Second User's Name" required="required" tabindex="1" autofocus="autofocus" />
+          </label> 
+      </div>
+      <div>             
+          <label for="lang2">
+          <span>Into what language?</span>
+            <select id="lang2">   
+              <option value="ar">Arabic</option>
+              <option value="cs">Czech</option>
+              <option value="de">German</option>
+              <option value="en">English</option>
+              <option value="et">Estonian</option>
+              <option value="fi">Finnish</option>
+              <option value="fr">French</option>
+              <option value="nl">Dutch</option>
+              <option value="el">Greek</option>
+              <option value="he">Hebrew</option>
+              <option value="ht">Haitian Creole</option>
+              <option value="hu">Hungarian</option>
+              <option value="id">Indonesian</option>
+              <option value="it">Italian</option>
+              <option value="ja">Japanese</option>
+              <option value="lv">Latvian</option>
+              <option value="no">Norwegian</option>
+              <option value="pl">Polish</option>
+              <option value="pt">Portuguesse</option>
+              <option value="ro">Romanian</option>
+              <option value="es">Spanish</option>
+              <option value="ru">Russian</option>
+              <option value="sk">Slovak</option>
+              <option value="sv">Swedish</option>
+              <option value="th">Thai</option>
+              <option value="tr">Turkish</option>
+              <option value="uk">Ukrainian</option>
+              <option value="vi">Vietnamese</option>
+              <option value="zh-CHS">Simplified Chinese</option>
+              <option value="zh-CHT">Traditional Chinese</option>
+            </select>
+          </label>
+      </div>
+			<div>		           
+		      <button name="submit" type="submit" id="submit">ADD MESSAGE</button> 
+			</div>
+      <p></p>
+      <div>              
+          <a href=""><button type="submit">COMPLETE INTERACTION</button></a>
+      </div>
+		  </form>
+
+      <div class="container" id="translation-wrapper" style="margin-top:15px;">
+        <h3>Translation: </h3>
+      </div>
+      <p></p>
+	</div>
+  <script src="http://www.microsoftTranslator.com/ajax/v3/WidgetV3.ashx?siteData=ueOIGRSKkd965FeEGM5JtQ**" type="text/javascript"></script>
+    <script type="text/javascript">
+      $('#submit').on('click touchstart', function(){
+        var lang1 = $('#lang1').val().toString();
+        var firstLang = $('#lang1').find(":selected").text();
+        var lang2 = $('#lang2').val().toString();
+        var secondLang = $('#lang2').find(":selected").text();
+        var name1 = $('#name1').val().toString();
+        var firstName = $('#name1').find(":selected").text();
+        var name2 = $('#name2').val().toString();
+        var secondName = $('#name2').find(":selected").text();
+      $('#translation-wrapper').append('<p>'firstName: '</p><p class="translation"></p');
+      $('.translation:last-child').text($('#value').val());
+        Microsoft.Translator.Widget.Translate(first, language);
+      $('#lang1').val(lang2);
+      $('#lang2').val(lang1);
+      return false;
+      });
+  </script>
+
+
+  
+  
 </body>
 </html>
