Adding survey link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div>
 		      <label for="name1">
 		      	<span class="text">Message coming from: </span> 
-		      	<input type="text" id="name1" name="name1" value="" placeholder="First User's Name" required="required" tabindex="1" autofocus="autofocus" />
+		      	<input type="text" id="name1" name="name1" value="" placeholder="First User's Name" tabindex="1" autofocus="autofocus" />
 		      </label> 
 			</div>
       <div>             
@@ -81,7 +81,7 @@
       <div>
           <label for="name2">
             <span class="text">Message being translated for: </span> 
-            <input type="text" id="name2" name="name2" value="" placeholder="Second User's Name" required="required" tabindex="1" autofocus="autofocus" />
+            <input type="text" id="name2" name="name2" value="" placeholder="Second User's Name" tabindex="1" autofocus="autofocus" />
           </label> 
       </div>
       <div>             
@@ -126,7 +126,7 @@
 			</div>
       <p></p>
       <div>              
-          <a href=""><button type="submit">COMPLETE INTERACTION</button></a>
+          <a href="https://ufl.qualtrics.com/SE/?SID=SV_eW3gInqOUcSzB8V"><button type="submit">COMPLETE INTERACTION</button></a>
       </div>
 		  </form>
 
