--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			</div>
       <p></p>
       <div>              
-          <a href="https://ufl.qualtrics.com/SE/?SID=SV_eW3gInqOUcSzB8V"><button type="submit">COMPLETE INTERACTION</button></a>
+          <button onclick="location.href='https://ufl.qualtrics.com/SE/?SID=SV_eW3gInqOUcSzB8V'" type="submit">COMPLETE INTERACTION</button>
       </div>
 		  </form>
 
