--- a/index.html
+++ b/index.html
@@ -125,15 +125,15 @@
 		      <button name="submit" type="submit" id="submit">ADD MESSAGE</button> 
 			</div>
       <p></p>
-      <div>              
-          <button onclick="location.href='https://ufl.qualtrics.com/SE/?SID=SV_eW3gInqOUcSzB8V'" type="submit">COMPLETE INTERACTION</button>
-      </div>
 		  </form>
 
       <div class="container" id="translation-wrapper" style="margin-top:15px;">
         <h3>Translation: </h3>
       </div>
       <p></p>
+      <div>              
+          <a href="https://ufl.qualtrics.com/SE/?SID=SV_eW3gInqOUcSzB8V">COMPLETE INTERACTION</a>
+      </div>
 	</div>
   <script src="http://www.microsoftTranslator.com/ajax/v3/WidgetV3.ashx?siteData=ueOIGRSKkd965FeEGM5JtQ**" type="text/javascript"></script>
     <script type="text/javascript">
@@ -146,7 +146,7 @@
         var firstName = $('#name1').find(":selected").text();
         var name2 = $('#name2').val().toString();
         var secondName = $('#name2').find(":selected").text();
-      $('#translation-wrapper').append('<p>'firstName: '</p><p class="translation"></p');
+      $('#translation-wrapper').append('<p>'+firstName: +'</p><p class="translation"></p');
       $('.translation:last-child').text($('#value').val());
         Microsoft.Translator.Widget.Translate(lang1, lang2);
       $('#lang1').val(lang2);
