--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <a href="https://ufl.qualtrics.com/SE/?SID=SV_eW3gInqOUcSzB8V">COMPLETE INTERACTION</a>
       </div>
 	</div>
-  <script src="http://www.microsoftTranslator.com/ajax/v3/WidgetV3.ashx?siteData=ueOIGRSKkd965FeEGM5JtQ**" type="text/javascript"></script>
+  <script src="https://www.microsoftTranslator.com/ajax/v3/WidgetV3.ashx?siteData=ueOIGRSKkd965FeEGM5JtQ**" type="text/javascript"></script>
     <script type="text/javascript">
       $('#submit').on('click touchstart', function(){
         var firstLang = $('#lang1').find(":selected").text();
