--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 		  </form>
 
       <div class="container" id="translation-wrapper" style="margin-top:15px;">
-        <h3>Translation: </h3>
+        <h3>Conversation: </h3>
       </div>
       <p></p>
       <div>              
