--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
             </select>
           </label>
       </div>
+      <p></p>
+      <div>
+        <text>When pressing the "Add Message" button, the page will flip and the only action necessary is for the next user to enter their message.</text> 
+      </div>
+      <p></p>
 			<div>		           
 		      <button name="submit" type="submit" id="submit">ADD MESSAGE</button> 
 			</div>
@@ -151,6 +156,7 @@
         $('#lang2').val(lang1);
         $('#name1').val(name2);
         $('#name2').val(name1);
+        $('#message').val("");
       return false;
       });
   </script>
