Really really done now

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <a href="https://ufl.qualtrics.com/SE/?SID=SV_eW3gInqOUcSzB8V"><button type="submit">COMPLETE INTERACTION</button></a>
       </div>
 	</div>
-  <script src="https://www.microsoftTranslator.com/ajax/v3/WidgetV3.ashx?siteData=ueOIGRSKkd965FeEGM5JtQ**&ui=false" type="text/javascript"></script>
+  <script src="https://www.microsoftTranslator.com/ajax/v3/WidgetV3.ashx?siteData=ueOIGRSKkd965FeEGM5JtQ**" type="text/javascript"></script>
     <script type="text/javascript">
       $('#submit').on('click touchstart', function(){
         var lang1 = $('#lang1').val().toString();
